application/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  loadBalancerSourceRanges:
  - "10.0.4.0/24"
  - "10.0.5.0/24"
  - "10.0.6.0/24"
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend
      app: frontend
  template:
    metadata:
      labels:
        service: frontend
        app: frontend
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "public:8080"
        consul.hashicorp.com/enable-metrics-merging: "false"
        consul.hashicorp.com/transparent-proxy: "false"
        consul.hashicorp.com/transparent-proxy-exclude-inbound-ports: "80"
    spec:
      serviceAccountName: frontend
      volumes:
      - name: config
        configMap:
          name: nginx-configmap
          items:
          - key: config
            path: default.conf
      containers:
        - name: frontend
          image: hashicorpdemoapp/frontend:v0.0.5
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d
              readOnly: true
