application/public-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: public
  labels:
    app: public
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: public
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public
spec:
  replicas: 1
  selector:
    matchLabels:
      service: public
      app: public
  template:
    metadata:
      labels:
        service: public
        app: public
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "product:9090"
        consul.hashicorp.com/enable-metrics-merging: "false"
        consul.hashicorp.com/transparent-proxy: "false"
    spec:
      serviceAccountName: public
      containers:
        - name: public
          image: hashicorpdemoapp/public-api:v0.0.5
          ports:
            - containerPort: 8080
